feat: add non-existing user error